[package]
name = "igarchive_v2"
version = "0.1.0"
authors = ["rj_101011010"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text_io = "0.1.8"
ctrlc = { version = "3.0", features = ["termination"] }
prettytable-rs = "0.8.0"
chrono = "0.4.19"
hhmmss = "0.1.0"
